<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/common_padding"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/size_image"
            android:layout_height="@dimen/size_image">

            <androidx.cardview.widget.CardView
                android:id="@+id/image_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="0dp"
                >
                <ImageView
                    android:id="@+id/edit_profile_picture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/img_avatar" />

                <!--<Button
                    android:id="@+id/changephotobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:text="Cambiar foto" />-->

                <!--<Button
                    android:id="@+id/deletephotobutton"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="top|right"
                    android:text="X" />-->

                <ImageButton
                    android:id="@+id/changephotobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|left"
                    app:srcCompat="@drawable/add_photo_icon" />

                <ImageButton
                    android:id="@+id/deletephotobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    app:srcCompat="@drawable/remove_photo_icon" />


            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/box_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_padding"
            android:layout_marginTop="@dimen/common_padding"
            android:hint="@string/text_nombre"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etnombre"
                android:inputType="textPersonName"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/box_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_padding"
            android:layout_marginTop="@dimen/common_padding"
            android:hint="@string/text_correo"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etcorreo"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/box_web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_padding"
            android:layout_marginTop="@dimen/common_padding"
            android:hint="@string/text_sitio_web"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etsitioweb"
                android:inputType="textWebEditText"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/box_contacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_padding"
            android:layout_marginTop="@dimen/common_padding"
            android:hint="@string/text_phone"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etphone"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/common_padding"
            android:layout_marginHorizontal="@dimen/common_padding"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/box_lat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:hint="@string/txt_lat"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etlat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/min_margin"
                    android:inputType="numberDecimal|numberSigned"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/box_lon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:hint="@string/txt_lon"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etlon"
                    android:inputType="numberDecimal|numberSigned"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>